# marimo_materials

./: LICENSE  Makefile  README.md  agents.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.claude/skills/prep-release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  tests.yml
demos/: altairwidget.py  crystalbuilder.py  crystaldownload.py  crystaleditor.py  crystalupload.py  crystalviewer.py
marimo_materials/: __init__.py  altair_widget.py  atoms_view.py  crystal_builder.py  crystal_download.py  crystal_editor.py  crystal_upload.py  crystal_viewer.py  crystal_viewer_controls.py
marimo_materials/static/: bulk-builder.js  crystal-builder.css  crystal-download.css  crystal-download.js  crystal-editor.css  crystal-editor.js  crystal-shared.css  crystal-upload.css  crystal-upload.js  molecule-builder.js  nanoparticle-builder.js  surface-builder.js
mkdocs/: index.md  llms.txt
mkdocs/assets/: gallery-lightbox.js
mkdocs/assets/gallery/: builder_bulk.webm  builder_molecule.webm  builder_surface.webm  crystal_downloader.webm  crystal_viewer.webm
mkdocs/assets/stylesheets/: extra.css
mkdocs/reference/: altair-widget.md  crystal-builder.md  crystal-download.md  crystal-editor.md  crystal-upload.md  crystal-viewer.md  index.md  show-atoms.md
scripts/: copy_docs_md.py  mkdocs_hooks.py
tests/: test_altair_widget.py  test_atoms_view.py  test_crystal_builder.py  test_crystal_editor.py  test_crystal_viewer.py
tests/test_browser/: conftest.py
